[gd_scene load_steps=6 format=3 uid="uid://dhneh0rgkxftq"]

[ext_resource type="Texture2D" uid="uid://dmpvkb5v8q60k" path="res://sprite/back_ground.jpg" id="1_nqhy7"]
[ext_resource type="Script" path="res://scene/profile.gd" id="1_skhse"]
[ext_resource type="Texture2D" uid="uid://ul08surpbcw6" path="res://sprite/name.png" id="2_jkkmb"]
[ext_resource type="Texture2D" uid="uid://gsv4rgceqhcr" path="res://sprite/point.png" id="3_eubum"]
[ext_resource type="Texture2D" uid="uid://cm3nryrk0r4al" path="res://sprite/exit.png" id="5_o17fj"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_skhse")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.292, 0.295111)
texture = ExtResource("1_nqhy7")

[node name="Panel" type="Panel" parent="."]
offset_left = 256.0
offset_top = 128.0
offset_right = 896.0
offset_bottom = 512.0

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(128, 96)
scale = Vector2(0.203556, 0.128528)
texture = ExtResource("2_jkkmb")

[node name="Sprite2D2" type="Sprite2D" parent="Panel"]
position = Vector2(128, 288)
scale = Vector2(0.375, 0.25)
texture = ExtResource("3_eubum")

[node name="name_label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 256.0
offset_top = 64.0
offset_right = 480.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="point_label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 256.0
offset_top = 224.0
offset_right = 480.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="exit_texture_button" type="TextureButton" parent="."]
offset_top = 540.0
offset_right = 100.0
offset_bottom = 640.0
texture_normal = ExtResource("5_o17fj")
